--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.7.2"
   },
