--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.21.0",
     "@neondatabase/serverless": "^0.10.4",
+    "dotenv": "^16.0.0",
     "express": "^4.21.2",
+    "postgres": "^3.4.0",
     "resend": "^4.0.1"
   },
   "devDependencies": {
