--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
     "stdio": "tsx src/index.ts --stdio",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "keywords": [
     "mcp",
